tests/errors/_questions/generated_errors/arr_init_must_start_from_BEGIN/test.c
void main()
{
	int А[] = 10, 10, 0, 0};
	int b = 10;

	printid(А);
	printid(b);
}